ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.1.5
    • Affects Version/s: None
    • Component/s: Logging
    • Fully Compatible
    • ALL
    • Platform 5 06/26/16
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Currently in master, a new behavior is to log every command failure or assertion. This includes command parsing errors and every uassert that a command may throw. For example, the not-master assertion:

      2015-06-18T13:47:18.401-0400 I COMMAND  [conn2] assertion while executing command 'getMore' on database 'test' with arguments '{ getMore: 62016858025, collection: "foo", term: 1 }' and metadata '{}': 13435 not master and slaveOk=false
      

      I believe we should change this to log at debug log level 1, to avoid filling the server log with what are essentially user-generated common errors.

            Assignee:
            Adam Midvidy (Inactive)
            Reporter:
            Eric Milkie
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: