SERVER-19034 log command errors at log level 1